crates/biome_cli/tests/snapshots/main_commands_rage/with_server_logs.snap
---
source: crates/biome_cli/tests/commands/rage.rs
expression: content
---
# Emitted Messages

```block
CLI:
  Version:                      0.0.0
  Color support:                **PLACEHOLDER**

Platform:
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Environment:
  BIOME_LOG_DIR:                **PLACEHOLDER**
  BIOME_LOG_PREFIX_NAME:        unset
  BIOME_CONFIG_PATH:            unset
  NO_COLOR:                     **PLACEHOLDER**
  TERM:                         **PLACEHOLDER**
  JS_RUNTIME_VERSION:           unset
  JS_RUNTIME_NAME:              unset
  NODE_PACKAGE_MANAGER:         unset

Biome Configuration:
  Status:                       unset

Server:
  Version:                      0.0.0
  Name:                         biome_lsp
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Workspace:
  Open Documents:               0
```

```block

Biome Server Log:

! Please review the content of the log file before sharing it publicly as it may contain sensitive information:
  * Path names that may reveal your name, a project name, or the name of your employer.
  * Source code


┐biome_cli::commands::daemon::Running Server{pid=195434}
├─2547ms INFO biome_lsp::server Starting Biome Language Server...
├─15333ms INFO biome_lsp::server Starting Biome Language Server...
├─15347ms INFO biome_lsp::server Attempting to load the configuration from 'biome.json' file
├─15347ms INFO biome_service::configuration Attempting to load the configuration file at path "/home/micha/git/ant-design/biome.json"
├─15347ms ERROR biome_service::configuration Could not find the file configuration at "/home/micha/git/ant-design/biome.json"
├─15347ms ERROR biome_service::configuration Reason: Os { code: 2, kind: NotFound, message: "No such file or directory" }
├─┐biome_js_parser::parse::parse{file_id=FileId(0)}
├─┘
├─┐biome_js_parser::parse::parse{file_id=FileId(1)}
├─┘
├─16108ms INFO biome_lsp::server Starting Biome Language Server...
├─41801ms INFO biome_lsp::server Starting Biome Language Server...
├─41802ms INFO biome_lsp::server Sending shutdown signal
INFO biome_cli::commands::daemon Received shutdown signal
├─41802ms ERROR tower_lsp::transport failed to encode message: failed to encode response: Broken pipe (os error 32)
┘
┐biome_cli::commands::daemon::Running Server{pid=197796}
├─2822ms INFO biome_lsp::server Starting Biome Language Server...
├─7550ms INFO biome_lsp::server Starting Biome Language Server...
├─7551ms INFO biome_lsp::server Attempting to load the configuration from 'biome.json' file
├─7551ms INFO biome_service::configuration Attempting to load the configuration file at path "/home/micha/git/ant-design/biome.json"
├─7551ms ERROR biome_service::configuration Could not find the file configuration at "/home/micha/git/ant-design/biome.json"
├─7551ms ERROR biome_service::configuration Reason: Os { code: 2, kind: NotFound, message: "No such file or directory" }
├─┐biome_js_parser::parse::parse{file_id=FileId(0)}
├─┘
├─┐biome_js_parser::parse::parse{file_id=FileId(1)}
├─┘
├─7897ms INFO biome_lsp::server Starting Biome Language Server...
```
